--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
             <div class="col d-flex align-items-center"><a class="arrowBtn arrowBtn_prev" href="#"></a></div>
             <div class="col-xl-10">
               <h1 class="caption caption_size_xl caption_color_wh text-center">Kayaks &amp; Canoes Rentals</h1>
-              <h2 class="caption caption_color_wh text-center">Norm's Marina — Full Service Marina in Hinsdale</h2>
+              <h2 class="caption caption_color_wh text-center caption_size_lg">Norm's Marina — Full Service Marina in Hinsdale</h2>
             </div>
             <div class="col d-flex align-items-center"><a class="arrowBtn arrowBtn_next" href="#"></a></div>
           </div>
@@ -85,11 +85,233 @@
               </div>
               <div class="col-md"></div>
             </div>
+            <div class="row mt-4">
+              <div class="col-xl-6">
+                <div class="kayakCard">
+                  <h3 class="caption caption_size_sm text-center m-0">Single <span class="caption_color_or">Kayak</span></h3>
+                  <p class="main__description main__description_size_sm main__description_style_uc text-center m-0">DOUBLE KAYAK + $15</p>
+                  <div class="kayakCard__wrap">
+                    <div class="container">
+                      <div class="row pt-3">
+                        <div class="col-3 p-0">
+                          <div class="kayakCard__left"><img class="img-fluid" src="img/kayak.png"></div>
+                        </div>
+                        <div class="col-9">
+                          <div class="kayakCard__right">
+                            <table class="table">
+                              <tr>
+                                <td class="main__text main__text_size_md main__text_style_bl border-none_tp">1 Hour</td>
+                                <td class="main__text main__text_size_md main__text_style_bl text-right border-none_tp">$25</td>
+                              </tr>
+                              <tr>
+                                <td class="main__text main__text_size_md main__text_style_bl">2 Hours</td>
+                                <td class="main__text main__text_size_md main__text_style_bl text-right">$35</td>
+                              </tr>
+                              <tr>
+                                <td class="main__text main__text_size_md main__text_style_bl">Half Day</td>
+                                <td class="main__text main__text_size_md main__text_style_bl text-right">$50</td>
+                              </tr>
+                              <tr>
+                                <td class="main__text main__text_size_md main__text_style_bl">Full Day</td>
+                                <td class="main__text main__text_size_md main__text_style_bl text-right">$55</td>
+                              </tr>
+                            </table><a class="button button_back_bl button_radius_rl button_font_md button_padding_bg button_style_rl button_margin_tp" href="#">Book Now</a>
+                            <p class="main__text text-center mt-3 pt-1 mb-0">Or call us now <a href="tel:6032566266" class="main__text_color_bl"> 603 256 6266</a></p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-xl-6">
+                <div class="kayakCard">
+                  <h3 class="caption caption_size_sm text-center m-0">Single <span class="caption_color_or">Canoe</span></h3>
+                  <p class="main__description main__description_size_sm main__description_style_uc text-center m-0">OR FAMILY CANOE</p>
+                  <div class="kayakCard__wrap">
+                    <div class="container">
+                      <div class="row pt-3">
+                        <div class="col-3 p-0">
+                          <div class="kayakCard__left"><img class="img-fluid" src="img/canoe.png"></div>
+                        </div>
+                        <div class="col-9">
+                          <div class="kayakCard__right">
+                            <table class="table">
+                              <tr>
+                                <td class="main__text main__text_size_md main__text_style_bl border-none_tp">1 Hour</td>
+                                <td class="main__text main__text_size_md main__text_style_bl text-right border-none_tp">$25</td>
+                              </tr>
+                              <tr>
+                                <td class="main__text main__text_size_md main__text_style_bl">2 Hours</td>
+                                <td class="main__text main__text_size_md main__text_style_bl text-right">$35</td>
+                              </tr>
+                              <tr>
+                                <td class="main__text main__text_size_md main__text_style_bl">Half Day</td>
+                                <td class="main__text main__text_size_md main__text_style_bl text-right">$50</td>
+                              </tr>
+                              <tr>
+                                <td class="main__text main__text_size_md main__text_style_bl">Full Day</td>
+                                <td class="main__text main__text_size_md main__text_style_bl text-right">$55</td>
+                              </tr>
+                            </table><a class="button button_back_bl button_radius_rl button_font_md button_padding_bg button_style_rl button_margin_tp" href="#">Book Now</a>
+                            <p class="main__text text-center mt-3 pt-1 mb-0">Or call us now <a href="tel:6032566266" class="main__text_color_bl"> 603 256 6266</a></p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xl"></div>
+              <div class="col col-xl-10 text-center">
+                <p class="main__text main__text_style_uc mt-4 pt-3">ALL RATES ARE BASED ON 1 HOUR, AS THIS IS THE GENERAL AMOUNT OF TIME IT TAKES TO ENJOY A NICE LEISURELY ROUND-TRIP PADDLE FROM NORM’S MARINA TO EITHER BOSTON-MAIN HISTORIC RAIL ROAD BRIDGE OR TO THE WEST RIVER AND MARINA’S RESTAURANT FOR A WONDERFUL LUNCH ON THE RIVER. AVAILABILITY IS BASED ON FIRST COME FIRST SERVE, RESERVATION IS NOT NECESSARY, HOWEVER, THERE MIGHT BE A WAITING LINE DURING OUR PEAK HOURS AT 10AM TO 2PM IN SEASON.</p>
+              </div>
+              <div class="col-xl"></div>
+            </div>
+            <div class="row pb-5">
+              <div class="col-12 col-xl-6">
+                <div class="rentalCard">
+                  <h3 class="caption caption_color_wh caption_size_sm text-center">Rental Rules</h3>
+                  <p class="main__text main__text_color_wh text-center">Please, get acquainted with the following list of simple rules to keep you and your family safe and sound while resting.</p><a class="button button_back_wh button_radius_rl button_color_or button_font_md button_padding_bg button_style_wh button_position_tp" href="#">Book Now</a>
+                </div>
+              </div>
+              <div class="col-12 col-xl-6">
+                <div class="rentalCard">
+                  <h3 class="caption caption_color_wh caption_size_sm text-center">Rental Release Agreement</h3>
+                  <p class="main__text main__text_color_wh text-center">This document helps us to maintain our equipment in good condition to bring holidaymakers joy every time they visit us.</p><a class="button button_back_wh button_radius_rl button_color_or button_font_md button_padding_bg button_style_wh button_position_tp" href="#">Book Now</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="about">
+        <div class="about__wrap">
+          <div class="about__content container p-0">
+            <div class="row">
+              <div class="col-md"></div>
+              <div class="col-md-10 text-center">
+                <h2 class="caption caption_size_md caption_padding_xl caption_color_wh">About Norm's Marina</h2>
+                <p class="main__text main__text_color_wh main__text_size_md pt-1">80 boat slips, land storage, mechanic and repairs, onsite gas tank,<br> 10 professional fishing tournaments held every year, kayaks and canoes rentals.</p>
+              </div>
+              <div class="col-md"></div>
+            </div>
+            <div class="row no-gutters">
+              <div class="col">
+                <div class="aboutCard-wrap d-flex owl-carousel owl-theme" id="aboutSlider">
+                  <div class="aboutCard text-center">
+                    <div class="roundIcon roundIcon_first"></div>
+                    <h3 class="caption caption_size_sm text-center m-0">Boat <span class="caption_color_or">Slips</span></h3>
+                    <p class="main__text pt-2">Come and enjoy Connecticut river, puddle miles of open and calm waters. Stop by in Brattleboro for lunch or snacks. Own the river at Norm's Marina. Miles and miles of the best boating on Connecticut river. Come for a day, week, month or the whole season, flexible availability and deals.</p>
+                  </div>
+                  <div class="aboutCard text-center">
+                    <div class="roundIcon roundIcon_first"></div>
+                    <h3 class="caption caption_size_sm text-center m-0">Land <span class="caption_color_or">Storage</span> </h3>
+                    <p class="main__text pt-2">Come and enjoy Connecticut river, puddle miles of open and calm waters. Stop by in Brattleboro for lunch or snacks. Own the river at Norm's Marina. Miles and miles of the best boating on Connecticut river. Come for a day, week, month or the whole season, flexible availability and deals.</p>
+                  </div>
+                  <div class="aboutCard text-center">
+                    <div class="roundIcon roundIcon_first"></div>
+                    <h3 class="caption caption_size_sm text-center m-0">Mechanic <span class="caption_color_or"> &amp; Repairs</span></h3>
+                    <p class="main__text pt-2">Come and enjoy Connecticut river, puddle miles of open and calm waters. Stop by in Brattleboro for lunch or snacks. Own the river at Norm's Marina. Miles and miles of the best boating on Connecticut river. Come for a day, week, month or the whole season, flexible availability and deals.</p>
+                  </div>
+                  <div class="aboutCard text-center">
+                    <div class="roundIcon roundIcon_first"></div>
+                    <h3 class="caption caption_size_sm text-center m-0">Onsite <span class="caption_color_or">Gas Tank</span></h3>
+                    <p class="main__text pt-2">Come and enjoy Connecticut river, puddle miles of open and calm waters. Stop by in Brattleboro for lunch or snacks. Own the river at Norm's Marina. Miles and miles of the best boating on Connecticut river. Come for a day, week, month or the whole season, flexible availability and deals.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col d-flex justify-content-center mt-4 mb-4"><a class="about-left button button_back_wh button_radius_lr button_color_or button_font_md button_padding_bg button_arrow button_arrow_prev m-3" href="#"></a><a class="about-right button button_back_wh button_radius_rl button_color_or button_font_md button_padding_bg button_arrow button_arrow_next m-3" href="#"></a></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="contact d-flex align-items-center">
+        <div class="contact__content container">
+          <div class="row">
+            <div class="col-xl"></div>
+            <div class="col col-xl-6 text-center">
+              <h2 class="caption caption_size_xl caption_color_wh text-center contact__caption">Contact Us</h2>
+              <p class="contact__text caption caption_color_wh text-center caption_size_lg pb-4 px-2">Better yet, see us in person! <br> We love our customers, so feel free to visit during normal business hours.</p><a class="button button_back_wh button_radius_rl button_color_or button_font_md button_padding_bg button_style_wh d-inline-block" href="#">Contacts Us</a>
+            </div>
+            <div class="col-xl"></div>
           </div>
         </div>
       </div>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-xl"></div>
+          <div class="col-xl-6">
+            <h2 class="caption caption_color_wh caption_size_lb mb-2">Norm's Marina</h2>
+            <p class="main__text main__text_color_wh">1347 Brattleboro Road, Hinsdale,<br> New Hampshire 03451, United States</p><a class="caption caption_color_wh caption_size_lb" href="tel:6032566266">603 256 6266</a>
+            <p class="main__text main__text_color_wh">Call from 10am till 8pm</p>
+          </div>
+          <div class="col-xl-4">
+            <h2 class="caption caption_color_wh caption_size_lb mb-2">Working Hours</h2>
+            <table class="table table-borderless main__text_color_wh">
+              <tr>
+                <td class="py-0 pl-0 pr-5">Monday</td>
+                <td class="py-0 pl-5">08:00am – 06:00pm</td>
+              </tr>
+              <tr>
+                <td class="p-0">Tuesday</td>
+                <td class="py-0 pl-5">09:00am – 05:00pm</td>
+              </tr>
+              <tr>
+                <td class="p-0">Wednesday</td>
+                <td class="py-0 pl-5">09:00am – 05:00pm</td>
+              </tr>
+              <tr>
+                <td class="p-0">Thursday</td>
+                <td class="py-0 pl-5">09:00am – 05:00pm</td>
+              </tr>
+              <tr>
+                <td class="p-0">Friday</td>
+                <td class="py-0 pl-5">09:00am – 05:00pm</td>
+              </tr>
+              <tr>
+                <td class="p-0">Saturday</td>
+                <td class="py-0 pl-5">Closed</td>
+              </tr>
+              <tr>
+                <td class="p-0">Sunday</td>
+                <td class="py-0 pl-5">Closed</td>
+              </tr>
+            </table>
+          </div>
+          <div class="col-xl"></div>
+        </div>
+        <div class="row mt-3">
+          <div class="col-xl"></div>
+          <div class="col-xl-6 d-flex align-items-center"><a class="button button_back_wh button_radius_rl button_color_bl button_font_md button_padding_bg button_style_wh d-inline-block" href="#">See Us On The Map</a></div>
+          <div class="col-xl-4">
+            <p class="main__text main__text_color_wh main__text_style_bl m-0">Monday - Sunday:</p>
+            <p class="main__text main__text_color_wh">Boat Launching - Dawn to dusk <br> Gas - 8am - 6pm</p>
+          </div>
+          <div class="col-xl"></div>
+        </div>
+      </div>
+      <div class="footer__bottom">
+        <div class="container"> 
+          <div class="row">
+            <div class="col-xl"></div>
+            <div class="col-xl-5">
+              <p class="main__text main__text_color_wh">Copyright &copy; 2019 Norms Marina - All Rights Reserved</p>
+            </div>
+            <div class="col-xl-5">
+              <p class="main__text main__text_color_wh">Site Development &amp; Support — Admiral Software</p>
+            </div>
+            <div class="col-xl"></div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script>new WOW().init();</script>
   </body>
 </html>
